--- a/portfolio.html
+++ b/portfolio.html
@@ -113,12 +113,72 @@
         <div class="row py-5">
             <div class="col-12 text-center">
                 <div id="myBtnContainer">
-                    <button class="portfolio__btn">Show all</button>
-                    <button class="portfolio__btn">Hairstyles</button>
-                    <button class="portfolio__btn">Beardstyles</button>
+                    <button class="portfolio__btn active portfolio__gallery-list-item" data-filter='all'>Show all</button>
+                    <button class="portfolio__btn portfolio__gallery-list-item" data-filter='hair'>Hairstyles</button>
+                    <button class="portfolio__btn portfolio__gallery-list-item" data-filter='beard'>Beardstyles</button>
 
                 </div>
             </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="portfolio__content filter hair all">
+              <img src="prod-assets/img/portfolio/1-beard.jpg" class="img-fluid">
+            </div>
+          </div>
+
+          <div class="col-lg-4 py-lg-0 py-3">
+            <div class="portfolio__content filter hair all">
+              <img src="prod-assets/img/portfolio/1-hair.jpg" class="img-fluid">
+            </div>
+          </div>
+
+          <div class="col-lg-4">
+            <div class="portfolio__content filter hair all">
+              <img src="prod-assets/img/portfolio/2-hair.jpg" class="img-fluid">
+            </div>
+          </div>
+
+        </div>
+        <div class="row py-3">
+          <div class="col-lg-4">
+            <div class="portfolio__content filter beard all">
+              <img src="prod-assets/img/portfolio/2-beard.jpg" class="img-fluid">
+            </div>
+          </div>
+
+          <div class="col-lg-4 py-lg-0 py-3">
+            <div class="portfolio__content filter beard all">
+              <img src="prod-assets/img/portfolio/3-hair.jpg" class="img-fluid">
+            </div>
+          </div>
+
+          <div class="col-lg-4">
+            <div class="portfolio__content filter beard all">
+              <img src="prod-assets/img/portfolio/3-beard.jpg" class="img-fluid">
+            </div>
+          </div>
+
+        </div>
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="portfolio__content filter hair all">
+              <img src="prod-assets/img/portfolio/4-beard.jpg" class="img-fluid">
+            </div>
+          </div>
+
+          <div class="col-lg-4 py-lg-0 py-3">
+            <div class="portfolio__content filter hair all">
+              <img src="prod-assets/img/portfolio/4-hair.jpg" class="img-fluid">
+            </div>
+          </div>
+
+          <div class="col-lg-4">
+            <div class="portfolio__content filter hair all">
+              <img src="prod-assets/img/portfolio/5-hair.jpg" class="img-fluid">
+            </div>
+          </div>
+
         </div>
     </div>
 </section>
